se agregan 2 parrafos

--- a/pagina1.html
+++ b/pagina1.html
@@ -9,6 +9,8 @@
 <body>
     <h1>Página de muestra</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo nam in fugit qui, pariatur nesciunt. Sunt unde perferendis facilis voluptatum fugit consectetur iste, nostrum odio rerum reiciendis placeat, aliquid aut.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, sequi, excepturi officiis vitae voluptatibus cumque blanditiis nostrum molestias dolore, fuga repudiandae sit eaque officia dolores ad. Inventore deserunt nam assumenda.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod, distinctio ipsum cupiditate veritatis doloribus, pariatur porro necessitatibus tenetur consequatur quasi id explicabo consequuntur assumenda harum magnam modi rerum? Corrupti, labore?</p>
     <a href="index.html"></a>
 </body>
 </html>
