--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Demo de Git y GitHub</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur, sunt labore quasi asperiores deserunt dignissimos libero! Illo, nam! Quae, ex sit distinctio eum itaque veritatis tempore! Eum, error exercitationem. Officia.</p>
+    <img src='gitConGatitos' alt='git con gatitos' />
 </body>
 </html>
